# noah

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NEXT_STEPS.md  README.md  build-windows.ps1  dev  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.sh  run_mac.sh  run_mac_nokey.sh  run_win_nokey.ps1
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/docs/: safety-policy.md
apps/desktop/src-tauri/icons/: icon.icns  regen-from-aurora.sh
apps/desktop/src-tauri/playbooks/: TEMPLATE.md  app-doctor.md  backup-verify-restore.md  browser-security-audit.md  credential-cleanup.md  disk-space-recovery.md  dns-record-check.md  email-connectivity-test.md  endpoint-security-check.md  health-baseline-check.md  identity-provider-test.md  local-data-audit.md  network-diagnostics.md  openclaw-install-config.md  outlook-troubleshooting.md  performance-forensics.md  printer-repair.md  setup-backup.md  setup-cuda.md  setup-email-account.md  setup-homebrew.md  setup-ssh-key.md  setup-wifi-profile.md  update-troubleshooting.md  vpn-troubleshooting.md  windows-printer-repair.md  windows-update-troubleshooting.md
apps/desktop/src-tauri/playbooks/setup-openclaw/: add-feishu-official.md  add-feishu.md  add-telegram.md  add-whatsapp.md  china-models.md  config-reference.md  configure.md  install-node.md  playbook.md  troubleshooting.md  uninstall.md
apps/desktop/src-tauri/src/: dashboard_link.rs  debug_runner.rs  fleet_policy.rs  fsm_tools.rs  knowledge.rs  lib.rs  machine_context.rs  playbook_runtime.rs  playbooks.rs  system_snapshot.rs  tauri_events.rs  ui_tools.rs  web_fetch.rs
apps/desktop/src-tauri/src/agent/: llm_client.rs  orchestrator.rs  prompts.rs  tool_router.rs
apps/desktop/src-tauri/src/autoheal/: mod.rs
apps/desktop/src-tauri/src/commands/: agent.rs  consumer.rs  health.rs  mod.rs  pairing.rs  scanner.rs  session.rs  settings.rs
apps/desktop/src-tauri/src/consumer/: client.rs  device.rs  entitlement.rs  mod.rs  session.rs
apps/desktop/src-tauri/src/mobile_server/: handlers.rs  mod.rs
apps/desktop/src-tauri/src/platform/: mod.rs  shell_helpers.rs
apps/desktop/src-tauri/src/platform/linux/: apps.rs  diagnostics.rs  mod.rs  network.rs  performance.rs  printer.rs
apps/desktop/src-tauri/src/platform/macos/: apps.rs  crash_logs.rs  diagnostics.rs  disk_audit.rs  mod.rs  (+3 more)
apps/desktop/src-tauri/src/proactive/: mod.rs
apps/desktop/src-tauri/src/safety/: journal.rs
apps/desktop/src-tauri/src/scanner/: backups.rs  disk.rs  mod.rs  network.rs  performance.rs  security.rs  updates.rs
apps/desktop/src-tauri/tests/: parse_real_sessions.rs  ui_tools_integration.rs
crates/noah-core/: Cargo.toml  playbooks
crates/noah-core/src/: config.rs  debug_runner.rs  events.rs  knowledge.rs  lib.rs  machine_context.rs  playbooks.rs  ui_parsing.rs  ui_tools.rs  web_fetch.rs
crates/noah-core/src/agent/: llm_client.rs  mod.rs  orchestrator.rs  prompts.rs  tool_router.rs
crates/noah-core/src/safety/: journal.rs  mod.rs  verifier.rs
crates/noah-debug-runner/: Cargo.toml
crates/noah-debug-runner/src/: main.rs
(+99 files in other folders)
