[package]
name = "noah-core"
version = "0.14.1"
edition = "2021"
description = "Platform-agnostic agent core for Noah"

[dependencies]
noah-tools = { path = "../noah-tools" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
html2text = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
