[package]
name = "itman-desktop"
version = "0.6.0"
description = "ITMan - AI-Powered IT Support"
authors = ["ITMan"]
edition = "2021"

[lib]
name = "itman_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
itman-tools = { path = "../../../crates/itman-tools" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
