[package]
name = "noah-desktop"
version = "0.16.0"
description = "Noah - AI-Powered IT Support"
authors = ["Noah"]
edition = "2021"
default-run = "noah-desktop"

[lib]
name = "noah_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
html2text = "0.12"
noah-tools = { path = "../../../crates/noah-tools" }
noah-health = { path = "../../../crates/noah-health" }
hostname = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
